--- a/.github/workflows/release-nuget.yml
+++ b/.github/workflows/release-nuget.yml
@@ -1,13 +1,12 @@
-name: "PR Validation"
+name: "Release Nuget"
 
 on:
   workflow_dispatch:
-  pull_request:
 
 jobs:
   nuget:
-    name: Validate Nuget Package
+    name: Publish Nuget Package
     uses: ./.github/actions/nuget.yml
     with:
-      publish: false
+      publish: true
     secrets: inherit
