--- a/.github/workflows/nuget-action.yml
+++ b/.github/workflows/nuget-action.yml
@@ -23,8 +23,8 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-      - name: Install dependencies
-        run: npm install
+      - name: Install NPM dependencies
+        run: npm ci
       - name: Generate SDK
         run: ./server/csharp.ps1
         shell: pwsh
