--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -11,3 +11,9 @@ jobs:
     with:
       publish: false
     secrets: inherit
+  go:
+    name: Validate Go Package
+    uses: ./.github/workflows/go-action.yml
+    with:
+      publish: false
+    secrets: inherit
