--- a/.github/workflows/go-action.yml
+++ b/.github/workflows/go-action.yml
@@ -1,4 +1,4 @@
-name: Build and Publish NuGet Package
+name: Build and Publish Go Package
 
 on:
   workflow_call:
@@ -15,10 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Setup dotnet
-        uses: actions/setup-dotnet@v4
+      - name: Set up Go
+        uses: actions/setup-go@v3
         with:
-          dotnet-version: 8.0.x
+          go-version: 1.23
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
@@ -26,9 +26,9 @@ jobs:
       - name: Install NPM dependencies
         run: npm ci
       - name: Generate SDK
-        run: ./server/csharp.ps1
+        run: ./server/go.ps1
         shell: pwsh
       - name: Publish SDK
         if: inputs.publish == true
-        run: ./publish/nuget.ps1
+        run: ./publish/go.ps1
         shell: pwsh
