--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -17,3 +17,9 @@ jobs:
     with:
       publish: false
     secrets: inherit
+  java:
+    name: Validate Java Package
+    uses: ./.github/workflows/java-action.yml
+    with:
+      publish: false
+    secrets: inherit
