--- a/.github/workflows/go-action.yml
+++ b/.github/workflows/go-action.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install NPM dependencies
         run: npm ci
       - name: Generate SDK
-        run: ./server/go.ps1
+        run: ./backend/go.ps1
         shell: pwsh
       - name: Publish SDK
         if: inputs.publish == true
