--- a/.github/workflows/nuget-action.yml
+++ b/.github/workflows/nuget-action.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Install NPM dependencies
         run: npm ci
       - name: Generate SDK
-        run: ./server/csharp.ps1
+        run: ./backend/csharp.ps1
         shell: pwsh
       - name: Publish SDK
         if: inputs.publish == true
