--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -41,3 +41,9 @@ jobs:
     with:
       publish: false
     secrets: inherit
+  rubygems:
+    name: Validate Rubygems Packages
+    uses: ./.github/workflows/rubygems-action.yml
+    with:
+      publish: false
+    secrets: inherit
