--- a/.github/workflows/go-release.yml
+++ b/.github/workflows/go-release.yml
@@ -4,7 +4,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  go:
+  release:
     name: Publish Go Package
     uses: ./.github/workflows/go-action.yml
     with:
