Add nuget api key secret (#7)

--- a/.github/workflows/nuget-action.yml
+++ b/.github/workflows/nuget-action.yml
@@ -32,3 +32,5 @@ jobs:
         if: inputs.publish == true
         run: ./publish/nuget.ps1
         shell: pwsh
+        env:
+          NUGET_API_KEY: ${{ secrets.NUGET_API_KEY }}
