--- a/.github/workflows/npm-action.yml
+++ b/.github/workflows/npm-action.yml
@@ -17,8 +17,11 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install NPM dependencies
         run: npm ci
-      - name: Generate SDK
+      - name: Generate backend SDK
         run: ./backend/node.ps1
+        shell: pwsh
+      - name: Generate web SDK
+        run: ./client/web/web.ps1
         shell: pwsh
       - name: Publish SDK
         if: inputs.publish == true
