--- a/.github/workflows/android-action.yml
+++ b/.github/workflows/android-action.yml
@@ -15,6 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
       - name: Install NPM dependencies
         run: npm ci
       - name: Publish SDK
