--- a/client/web/package.json
+++ b/client/web/package.json
@@ -2,7 +2,7 @@
   "name": "@trinsic/connect-web",
   "version": "0.2.3",
   "description": "Connect's web client to easily launch your verifications",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "esbuild src/index.ts --bundle --minify --sourcemap --global-name=Trinsic --format=iife --outfile=dist/index.js --target=chrome58,firefox57,safari11,edge16"
   },
