--- a/client/web/package.json
+++ b/client/web/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@trinsic/connect-web",
-  "version": "0.2.5",
+  "version": "0.2.7",
   "description": "Connect's web client to easily launch your verifications",
   "main": "dist/index.js",
   "scripts": {
-    "build": "esbuild src/index.ts --bundle --minify --sourcemap --global-name=Trinsic --format=iife --outfile=dist/index.js --target=chrome58,firefox57,safari11,edge16",
+    "build": "esbuild src/index.ts --bundle --minify --sourcemap --format=esm --outdir=dist --target=chrome58,firefox57,safari11,edge16",
     "postbuild": "tsc src/index.ts --declaration --emitDeclarationOnly --lib es2015,dom --outDir dist"
   },
   "types": "dist/index.d.ts",
