--- a/.github/workflows/go-action.yml
+++ b/.github/workflows/go-action.yml
@@ -15,6 +15,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
       - name: Install NPM dependencies
         run: npm ci
       - name: Generate SDK
