Fine tune frontend sample and add direct method launching

--- a/package.json
+++ b/package.json
@@ -1,4 +1,10 @@
 {
+  "private": true,
+  "workspaces": [
+    "dist/node",
+    "client/web",
+    "samples/node"
+  ],
   "name": "connect-sdks",
   "version": "1.0.0",
   "description": "",
