--- a/.github/workflows/rubygems-action.yml
+++ b/.github/workflows/rubygems-action.yml
@@ -24,3 +24,5 @@ jobs:
         if: inputs.publish == true
         run: ./publish/rubygems.ps1
         shell: pwsh
+        env:
+          RUBYGEMS_API_TOKEN: ${{ secrets.RUBYGEMS_API_TOKEN }}
