--- a/client/flutter/connect_flutter/example/android/app/src/main/AndroidManifest.xml
+++ b/client/flutter/connect_flutter/example/android/app/src/main/AndroidManifest.xml
@@ -25,6 +25,21 @@
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
+
+        <activity
+            android:name="id.trinsic.connectandroid.InvokeActivity"
+            android:launchMode="singleTop"
+            android:exported="true">
+            <intent-filter android:label="trinsic">
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+
+                <data android:scheme="blap" />
+            </intent-filter>
+        </activity>
+
         <!-- Don't delete the meta-data below.
              This is used by the Flutter tool to generate GeneratedPluginRegistrant.java -->
         <meta-data
