Re-enable `mavenCentral()` repository

--- a/client/flutter/connect_flutter/android/build.gradle
+++ b/client/flutter/connect_flutter/android/build.gradle
@@ -15,7 +15,7 @@ buildscript {
 rootProject.allprojects {
     repositories {
         google()
-//        mavenCentral()
+        mavenCentral()
         maven {
             url=uri("https://maven.pkg.github.com/trinsic-id/connect-sdks")
             credentials {
