--- a/samples/node/package.json
+++ b/samples/node/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "prestart": "cd ../web && npm run build && cd ../node",
-    "start": "ts-node-dev --respawn --transpile-only --env-file=.env -- src/index.ts"
+    "start": "ts-node-dev --respawn --transpile-only --env-file=.env -- src/index.ts",
+    "build": "tsc"
   },
   "author": "",
   "license": "ISC",
