--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -50,3 +50,9 @@ jobs:
   samples-web-ui:
     name: Validate Web UI sample
     uses: ./.github/workflows/samples-web-ui.yml
+  samples-node:
+    name: Validate Node sample
+    uses: ./.github/workflows/samples-node.yml
+  samples-csharp:
+    name: Validate C# sample
+    uses: ./.github/workflows/samples-csharp.yml
