--- a/samples/web-ui/package.json
+++ b/samples/web-ui/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run-script copy-library",
-    "copy-library": "cd ../../client/web && npm install && npm run build && cp dist/index.* ../../samples/web/dist/web-ui && cd ../../samples/web",
+    "copy-library": "cd ../../client/web && npm install && npm run build && cp dist/index.* ../../samples/web-ui/dist/web-ui && cd ../../samples/web-ui",
     "prestart": "npm run-script copy-library",
     "start": "live-server --cross"
   },
