--- a/.github/workflows/samples-csharp.yml
+++ b/.github/workflows/samples-csharp.yml
@@ -11,6 +11,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install NPM dependencies
         run: npm ci
+      - name: Generate backend SDK
+        run: ./backend/csharp.ps1
+        shell: pwsh
       - name: Build sample
-        run: npm run build
-        working-directory: ./samples/node
+        run: dotnet build
+        working-directory: ./samples/csharp
