--- a/.github/workflows/samples-node.yml
+++ b/.github/workflows/samples-node.yml
@@ -11,6 +11,9 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install NPM dependencies
         run: npm ci
+      - name: Generate backend SDK
+        run: ./backend/node.ps1
+        shell: pwsh
       - name: Build sample
-        run: dotnet build
-        working-directory: ./samples/csharp
+        run: npm run build
+        working-directory: ./samples/node
