--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -5,6 +5,12 @@ on:
   pull_request:
 
 jobs:
+  android:
+    name: Validate Android Package
+    uses: ./.github/workflows/android-action.yml
+    with:
+      publish: false
+    secrets: inherit
   nuget:
     name: Validate Nuget Package
     uses: ./.github/workflows/nuget-action.yml
