--- a/.github/workflows/php-action.yml
+++ b/.github/workflows/php-action.yml
@@ -32,3 +32,4 @@ jobs:
         env:
           PAT_GITHUB: ${{ secrets.PAT_GITHUB }}
           PACKAGE_VERSION: ${{ steps.generate-sdk.outputs.trinsic-package-version }}
+          SDK_REPOSITORY_PATH: ${{ github.repository }}
