--- a/client/android/ConnectAndroid/app/src/main/AndroidManifest.xml
+++ b/client/android/ConnectAndroid/app/src/main/AndroidManifest.xml
@@ -25,8 +25,7 @@
         </activity>
 
         <activity
-            android:name="id.trinsic.connectandroid.InvokeActivity"
-            android:launchMode="singleTop"
+            android:name="id.trinsic.connectandroid.CallbackActivity"
             android:exported="true">
             <intent-filter android:label="trinsic">
                 <action android:name="android.intent.action.VIEW" />
