--- a/client/flutter/connect_flutter/android/build.gradle
+++ b/client/flutter/connect_flutter/android/build.gradle
@@ -45,7 +45,7 @@ android {
     }
 
     dependencies {
-        implementation("id.trinsic:connect-android:0.1.0")
+        api("id.trinsic:connect-android:0.1.6")
         testImplementation("junit:junit:4.13.2")
         testImplementation("org.mockito:mockito-core:5.0.0")
     }
