--- a/client/flutter/connect_flutter/example/ios/Podfile
+++ b/client/flutter/connect_flutter/example/ios/Podfile
@@ -32,6 +32,7 @@ target 'Runner' do
   use_modular_headers!
 
   flutter_install_all_ios_pods File.dirname(File.realpath(__FILE__))
+  pod 'TrinsicUI', :path => '../../../../../swift/ui'
   target 'RunnerTests' do
     inherit! :search_paths
   end
