Add go sample validation step

--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -62,3 +62,6 @@ jobs:
   samples-csharp:
     name: Validate C# sample
     uses: ./.github/workflows/samples-csharp.yml
+  samples-go:
+    name: Validate Go sample
+    uses: ./.github/workflows/samples-go.yml
