--- a/react-native-ui/example/ios/Podfile
+++ b/react-native-ui/example/ios/Podfile
@@ -17,6 +17,8 @@ end
 target 'ReactNativeUiExample' do
   config = use_native_modules!
 
+  use_frameworks! :linkage => :static
+
   use_react_native!(
     :path => config[:reactNativePath],
     # An absolute path to your application root.
@@ -32,6 +34,10 @@ target 'ReactNativeUiExample' do
   pre_install do |installer|
     system("cd ../../ && yarn bob build --target codegen")
   end
+
+
+
+  pod 'TrinsicUI', :path => '../../../swift/ui'
 
   post_install do |installer|
     # https://github.com/facebook/react-native/blob/main/packages/react-native/scripts/react_native_pods.rb#L197-L202
