--- a/client/flutter/trinsic_flutter_ui/pubspec.yaml
+++ b/client/flutter/trinsic_flutter_ui/pubspec.yaml
@@ -1,7 +1,8 @@
 name: trinsic_flutter_ui
 description: "Library to invoke the Trinsic Identity Acceptance flow on Android and iOS"
-version: 0.0.1
-homepage:
+version: 0.0.3
+homepage: https://trinsic.id
+repository: https://github.com/trinsic-id/sdk
 
 environment:
   sdk: ^3.5.0
