--- a/.github/workflows/flutter-action.yml
+++ b/.github/workflows/flutter-action.yml
@@ -17,6 +17,11 @@ jobs:
       image: google/dart:latest
     steps:
       - uses: actions/checkout@v4
+      - name: Set up Flutter
+        uses: subosito/flutter-action@v2
+        with:
+          channel: stable
+          flutter-version: 3.24.0
       - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
