--- a/.github/workflows/flutter-action.yml
+++ b/.github/workflows/flutter-action.yml
@@ -20,10 +20,10 @@ jobs:
         with:
           channel: stable
           flutter-version: 3.24.0
-      - uses: actions/setup-java@v4
-        with:
-          distribution: 'temurin'
-          java-version: '21'
+      # - uses: actions/setup-java@v4
+      #   with:
+      #     distribution: 'temurin'
+      #     java-version: '21'
       - name: Setup credentials (todo investigate expiration)
         run: | 
           mkdir -p ~/.pub-cache 
