--- a/.github/workflows/java-action.yml
+++ b/.github/workflows/java-action.yml
@@ -15,6 +15,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+        with:
+          submodules: recursive
+          token: ${{ secrets.GITHUB_TOKEN }}
+          persist-credentials: false
       - name: Install NPM dependencies
         run: npm ci
       - name: Generate SDK
@@ -22,8 +26,5 @@ jobs:
         shell: pwsh
       - name: Publish SDK
         if: inputs.publish == true
-        run: ./publish/maven.ps1
+        run: ./publish/java.ps1
         shell: pwsh
-        env:
-          MAVEN_GITHUB_USERNAME: ${{ secrets.GITHUB_MAVEN_USERNAME }}
-          MAVEN_GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
