Add `generate-sdk` job ID

--- a/.github/workflows/java-action.yml
+++ b/.github/workflows/java-action.yml
@@ -22,6 +22,7 @@ jobs:
       - name: Install NPM dependencies
         run: npm ci
       - name: Generate SDK
+        id: generate-sdk
         run: ./backend/java.ps1
         shell: pwsh
       - name: Publish SDK
