--- a/.github/workflows/pr-validate.yml
+++ b/.github/workflows/pr-validate.yml
@@ -74,3 +74,6 @@ jobs:
   samples-python:
     name: Validate Python sample
     uses: ./.github/workflows/samples-python.yml
+  samples-java:
+    name: Validate Java sample
+    uses: ./.github/workflows/samples-java.yml
