Add android support

--- a/react-native-ui/android/build.gradle
+++ b/react-native-ui/android/build.gradle
@@ -105,6 +105,9 @@ android {
 repositories {
   mavenCentral()
   google()
+  maven {
+    url "https://jitpack.io"
+  }
 }
 
 def kotlin_version = getExtOrDefault("kotlinVersion")
@@ -115,6 +118,7 @@ dependencies {
   //noinspection GradleDynamicVersion
   implementation "com.facebook.react:react-native:+"
   implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+  api("com.github.trinsic-id:sdk-android-ui:0.1.1")
 }
 
 if (isNewArchitectureEnabled()) {
