--- a/react-native-ui/example/android/app/src/main/AndroidManifest.xml
+++ b/react-native-ui/example/android/app/src/main/AndroidManifest.xml
@@ -23,5 +23,19 @@
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
       </activity>
+
+      <activity
+        android:name="id.trinsic.android.ui.CallbackActivity"
+        android:launchMode="singleTop"
+        android:exported="true">
+        <intent-filter android:label="trinsic">
+          <action android:name="android.intent.action.VIEW" />
+
+          <category android:name="android.intent.category.DEFAULT" />
+          <category android:name="android.intent.category.BROWSABLE" />
+
+          <data android:scheme="trinsic-ui-example-redirect-scheme-react-native" />
+        </intent-filter>
+      </activity>
     </application>
 </manifest>
