--- a/.github/workflows/ui-web-action.yml
+++ b/.github/workflows/ui-web-action.yml
@@ -17,15 +17,15 @@ jobs:
       - uses: actions/checkout@v4
       - name: Install NPM dependencies
         run: npm ci
-      - name: Generate backend SDK
-        run: ./backend/node.ps1
+      - name: Generate api typescript SDK
+        run: ./api-typescript/build-sdk.ps1
         shell: pwsh
-      - name: Generate web SDK
-        run: ./client/web/web.ps1
+      - name: Generate ui web SDK
+        run: ./ui-web/build-sdk.ps1
         shell: pwsh
-      - name: Publish SDK
+      - name: Publish ui web SDK
         if: inputs.publish == true
-        run: ./publish/npm.ps1
+        run: ./ui-web/publish-sdk.ps1
         shell: pwsh
         env:
           NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
