--- a/ui-web/samples/package.json
+++ b/ui-web/samples/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "npm run-script copy-library",
-    "copy-library": "cd ../../client/web && npm install && npm run build && cp dist/index.* ../../samples/web-ui/dist/web-ui && cd ../../samples/web-ui",
+    "copy-library": "cd ../sdk && npm install && npm run build && cp dist/index.* ../samples/dist/ui-web && cd ../samples",
     "prestart": "npm run-script copy-library",
     "start": "live-server --cross"
   },
