--- a/.github/workflows/api-php-samples.yml
+++ b/.github/workflows/api-php-samples.yml
@@ -14,17 +14,17 @@ jobs:
       - name: Install NPM dependencies
         run: npm ci
       - name: Generate backend SDK
-        run: ./backend/php.ps1
+        run: ./api-php/build-sdk.ps1
         shell: pwsh
       - name: Copy web-ui
-        run: ./samples/php/assets.ps1
+        run: ./helpers/php-copy-web-ui.ps1
         shell: pwsh
       - name: Build sample
         run: composer install
-        working-directory: ./samples/php
+        working-directory: ./api-php/samples
       - name: Start PHP server
         run: php -S localhost:8080 -t public &
-        working-directory: ./samples/php
+        working-directory: ./api-php/samples
       - name: Wait to ensure server is up
         run: sleep 3
       - name: Check if server is running
