--- a/api-csharp/samples/Sample/Sample.csproj
+++ b/api-csharp/samples/Sample/Sample.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\..\dist\csharp\src\Trinsic.Api\Trinsic.Api.csproj" />
+    <ProjectReference Include="..\..\sdk\generated\src\Trinsic.Api\Trinsic.Api.csproj" />
   </ItemGroup>
 
 </Project>
