--- a/api-typescript/samples/package.json
+++ b/api-typescript/samples/package.json
@@ -18,7 +18,7 @@
     "typescript": "5.5.4"
   },
   "dependencies": {
-    "@trinsic/api": "file:../sdk/generated",
+    "@trinsic/api": "file:../sdk",
     "express": "4.19.2"
   }
 }
