--- a/.github/workflows/ui-swift-release.yml
+++ b/.github/workflows/ui-swift-release.yml
@@ -2,6 +2,8 @@ name: Build and Publish UI Swift SDK
 
 on:
   workflow_call:
+  push:
+    branches: ["jp/swift-library"]
 
 jobs:
   build_and_publish:
