--- a/api-java/samples/pom.xml
+++ b/api-java/samples/pom.xml
@@ -14,6 +14,13 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
+
     <dependencies>
         <!-- https://mvnrepository.com/artifact/io.javalin/javalin -->
         <dependency>
@@ -29,11 +36,11 @@
             <version>2.0.12</version>
         </dependency>
 
+        <!-- https://jitpack.io/#trinsic-id/sdk-java-api/0.4.0 -->
         <dependency>
-            <groupId>id.trinsic</groupId>
-            <artifactId>api</artifactId>
+            <groupId>com.github.trinsic-id</groupId>
+            <artifactId>sdk-java-api</artifactId>
             <version>0.4.0</version>
-            <scope>compile</scope>
         </dependency>
 
         <dependency>
