Build web-ui/samples with vite

--- a/.gitignore
+++ b/.gitignore
@@ -89,7 +89,6 @@ out
 
 # Nuxt.js build / generate output
 .nuxt
-dist
 
 # Gatsby files
 .cache/
@@ -611,3 +610,9 @@ doc/api/
 */sdk/generated/
 vendor
 sdk-build
+
+dist
+
+# Do not ignore the web-ui dist folder
+!ui-web/samples/dist
+!ui-web/samples/dist/assets/*.js.map
