--- a/ui-web/samples/package.json
+++ b/ui-web/samples/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "@trinsic/web-ui-sample",
-  "version": "1.0.0",
-  "description": "Small sample showcasing different interaction modes of Trinsic's library",
-  "main": "index.js",
+  "name": "sample",
+  "private": true,
+  "version": "0.0.0",
+  "type": "module",
   "scripts": {
-    "build": "npm run-script copy-library",
-    "copy-library": "cd ../sdk && npm install && npm run build && cp dist/index.* ../samples/dist/ui-web && cd ../samples",
-    "prestart": "npm run-script copy-library",
-    "start": "live-server --cross"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
-  "author": "",
-  "license": "ISC",
   "devDependencies": {
-    "live-server": "1.2.2"
+    "vite": "^5.4.1"
+  },
+  "dependencies": {
+    "@trinsic/web-ui": "^0.3.0"
   }
 }
