--- a/.github/workflows/ui-swift-samples.yml
+++ b/.github/workflows/ui-swift-samples.yml
@@ -12,15 +12,11 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0 # Ensure all history and tags are fetched
-      - name: Restore iOS Dependencies
-        run: swift package resolve
-        working-directory: ./ui-swift/samples/iOS
-      - name: Build iOS sample
-        run: swift build -v
-        working-directory: ./ui-swift/samples/iOS
-      - name: Restore macOS Dependencies
-        run: swift package resolve
-        working-directory: ./ui-swift/samples/macOS
-      - name: Build macOS sample
-        run: swift build -v
-        working-directory: ./ui-swift/samples/macOS
+      - name: Set up Xcode
+        run: sudo xcode-select -s /Applications/Xcode.app/Contents/Developer
+      - name: Install Dependencies
+        run: xcodebuild -resolvePackageDependencies -project iOS.xcodeproj
+        working-directory: ui-swift/samples/iOS
+      - name: Build the project
+        run: xcodebuild -project iOS.xcodeproj -scheme iOS -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 12,OS=latest' build
+        working-directory: ui-swift/samples/iOS
