--- a/.github/workflows/ui-swift-samples.yml
+++ b/.github/workflows/ui-swift-samples.yml
@@ -18,5 +18,5 @@ jobs:
         run: xcodebuild -resolvePackageDependencies -project iOS.xcodeproj
         working-directory: ui-swift/samples/iOS
       - name: Build the project
-        run: xcodebuild -project iOS.xcodeproj -scheme iOS -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 12,OS=latest' build
+        run: xcodebuild -project iOS.xcodeproj -scheme iOS -sdk iphonesimulator -destination 'platform=iOS Simulator,name=iPhone 12,OS=latest' build -allowProvisioningUpdates
         working-directory: ui-swift/samples/iOS
