--- a/.github/workflows/api-php-samples.yml
+++ b/.github/workflows/api-php-samples.yml
@@ -16,14 +16,11 @@ jobs:
       - name: Generate backend SDK
         run: ./api-php/build-sdk.ps1
         shell: pwsh
-      - name: Copy web-ui
-        run: ./helpers/php-copy-web-ui.ps1
-        shell: pwsh
       - name: Build sample
         run: composer install
         working-directory: ./api-php/samples
       - name: Start PHP server
-        run: php -S localhost:8080 -t public &
+        run: make start
         working-directory: ./api-php/samples
       - name: Wait to ensure server is up
         run: sleep 3
