--- a/.github/workflows/api-python-samples.yml
+++ b/.github/workflows/api-python-samples.yml
@@ -18,5 +18,5 @@ jobs:
         run: pip3 install -r requirements.txt
         working-directory: ./api-python/samples
       - name: Build sample
-        run: python3 validate.py
+        run: make validate
         working-directory: ./api-python/samples
