--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "api-typescript/sdk",
     "api-typescript/samples",
     "ui-web/sdk",
+    "ui-web/samples",
     "ui-react-native/sdk",
     "ui-react-native/samples"
   ],
