--- a/.github/workflows/api-php-samples.yml
+++ b/.github/workflows/api-php-samples.yml
@@ -16,6 +16,9 @@ jobs:
       - name: Generate backend SDK
         run: ./api-php/build-sdk.ps1
         shell: pwsh
+      - name: Install NPM dependncies for ui-web sample
+        run: npm ci
+        working-directory: ./ui-web/samples
       - name: Build sample
         run: composer install
         working-directory: ./api-php/samples
