--- a/.github/workflows/api-python-samples.yml
+++ b/.github/workflows/api-python-samples.yml
@@ -14,6 +14,12 @@ jobs:
       - name: Generate backend SDK
         run: ./api-python/build-sdk.ps1
         shell: pwsh
+      - name: Install NPM dependncies for ui-web sample
+        run: npm ci
+        working-directory: ./ui-web/samples
+      - name: Build ui-web sample
+        run: npm run build
+        working-directory: ./ui-web/samples
       - name: Install dependencies
         run: pip3 install -r requirements.txt
         working-directory: ./api-python/samples
