--- a/ui-web/sdk/package.json
+++ b/ui-web/sdk/package.json
@@ -1,13 +1,14 @@
 {
   "name": "@trinsic/web-ui",
-  "version": "0.3.0",
+  "version": "0.0.1",
   "description": "Trinsic's Web UI SDK to easily launch your verifications and capture the result",
-  "main": "dist/index.js",
+  "module": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "browser": "dist/index.js",
   "scripts": {
     "build": "esbuild src/index.ts --bundle --minify --sourcemap --format=esm --outdir=dist --target=chrome58,firefox57,safari11,edge16",
     "postbuild": "tsc src/index.ts --declaration --emitDeclarationOnly --lib es2015,dom --outDir dist"
   },
-  "types": "dist/index.d.ts",
   "author": "",
   "license": "ISC",
   "devDependencies": {
