--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build:ui-web": "cd ui-web/samples && npm run build"
   },
   "author": "",
   "license": "ISC",
