--- a/.github/workflows/ui-android-action.yml
+++ b/.github/workflows/ui-android-action.yml
@@ -29,3 +29,6 @@ jobs:
         if: inputs.publish == true
         run: ./ui-android/publish-sdk.ps1
         shell: pwsh
+        env:
+          PAT_GITHUB: ${{ secrets.PAT_GITHUB }}
+          SDK_REPOSITORY_PATH: ${{ github.repository }}
